--- a/src/app/components/_admin/admin.component.html
+++ b/src/app/components/_admin/admin.component.html
@@ -3,10 +3,6 @@
   <hr>
   <div class="content">
     <app-tabs [tabs]="tabs"></app-tabs>
-    <div
-      class="outlet"
-      [@fadeAnimation]="outlet.isActivated ? outlet.activatedRoute : ''">
-      <router-outlet #outlet="outlet"></router-outlet>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
