--- a/src/app/components/_user/profile/profile.component.scss
+++ b/src/app/components/_user/profile/profile.component.scss
@@ -5,10 +5,10 @@
   flex-direction: column;
 
   @media (min-width: $lg-screen) {
-    flex-direction: row;
+    flex-direction: row !important;
+    flex-grow: 1 !important;
     height: 100%;
     margin-top: -2rem;
-    flex-grow: 1;
 
     app-edit-avatar {
       order: 2;
