tweak avatar background logic

--- a/src/app/components/_user/home/home.component.html
+++ b/src/app/components/_user/home/home.component.html
@@ -7,5 +7,8 @@
     <span class="badge bg-secondary mr-3">TODO</span>
     Solicit User Info
   </p>
+  <p>
+    <a (click)="signOut($event)">Sign-Out</a>
+  </p>
 </div>
 
