--- a/src/app/components/_user/home/user-profile/user-profile.component.html
+++ b/src/app/components/_user/home/user-profile/user-profile.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <div class="avatar" *ngIf="!user.isLoading">
+  <div
+    class="avatar"
+    [class.default]="!user.avatar"
+    *ngIf="!user.isLoading">
     <div
       class="image"
       [style.backgroundImage]="'url(' + user.avatar + ')'"
