--- a/src/app/components/_user/home/user-profile/user-profile.component.scss
+++ b/src/app/components/_user/home/user-profile/user-profile.component.scss
@@ -45,7 +45,6 @@
   min-height: 100px;
   width: 100px;
   min-width: 100px;
-  background: $grey-color;
   border-radius: 50%;
   overflow: hidden;
   animation: fade-in .15s forwards ease-in;
@@ -57,6 +56,8 @@
     width: 120px;
     margin-left: 2rem;
   }
+
+  &.default { background: $grey-color; }
 
   .image {
     height: 100%;
