lighthouse fixes + general cleanup

--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -5,7 +5,11 @@
     <a
       class="logo"
       routerLink="/"
-      (click)="nav.closeMenu()">ng-fire-universal</a>
+      (click)="nav.closeMenu()">
+      <img
+        alt="ng-fire-universal"
+        src="/assets/img/logo/logo-primary.svg">
+    </a>
     <div
       class="menu-toggle"
       [class.active]="nav.isMenuOpen"
