--- a/src/app/components/_nav/footer/footer.component.scss
+++ b/src/app/components/_nav/footer/footer.component.scss
@@ -9,11 +9,12 @@ footer {
   flex-shrink: 0;
   position: relative;
   height: 100px;
-  color: $grey-color;
-  font-family: $font-logo;
-  font-size: 1.4rem;
   overflow: hidden;
-  user-select: none;
+
+  img {
+    width: 150px;
+    user-select: none;
+  }
 }
 
 // Credit: http://tholman.com/github-corners
