--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Lobster|Roboto:400,500,700,900');
+@import 'fonts';
 @import 'breakpoints';
-@import 'colors';
 
-$font-logo: 'Lobster', cursive;
 $font-primary: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
 
 body {
   font-family: $font-primary;
@@ -40,7 +37,6 @@ h2 {
 h3 {
   margin-bottom: 1.75rem;
   padding-bottom: .75rem;
-  color: $grey-color;
   font-size: 1.5rem;
   border-bottom: 1px solid rgba(0,0,0, .05);
 }
