--- a/src/app/components/_nav/footer/footer.component.scss
+++ b/src/app/components/_nav/footer/footer.component.scss
@@ -17,6 +17,46 @@ footer {
   }
 }
 
+.install-banner {
+  position: fixed;
+  bottom: 0;
+  display: none;
+  width: 100%;
+  opacity: 0;
+
+  &.active {
+    display: flex;
+    animation: fadeUpIn .25s 1s linear forwards;
+  }
+
+  .inner {
+    position: relative;
+    width: 100%;
+    margin: 15px;
+    padding-top: 10px;
+    font-size: 16px;
+    text-align: center;
+    color: #FFF;
+    background: rgba(0,0,0, .75);
+    border-radius: 8px;
+    box-shadow: 0 0 3px rgba(0,0,0, .25);
+
+    p { margin-bottom: 15px; }
+  }
+
+  .fa-times {
+    position: absolute;
+    top: 12px;
+    right: 15px;
+  }
+
+  .fa-arrow-down {
+    position: relative;
+    top: -10px;
+    animation: bounce 2s ease-in-out infinite;
+  }
+}
+
 // Credit: http://tholman.com/github-corners
 .github {
   display: none;
@@ -47,4 +87,15 @@ footer {
   0%, 100% { transform: rotate(0); }
   20%, 60% { transform: rotate(-25deg); }
   40%, 80% { transform: rotate(10deg); }
+}
+
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(10px); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes fadeUpIn {
+  from { transform: translate3d(0, 30px, 0); opacity: 0; }
+  to { transform: translate3d(0,0,0); opacity: 1; }
 }
