--- a/src/app/styles/_global.scss
+++ b/src/app/styles/_global.scss
@@ -1,12 +1,16 @@
 @import 'breakpoints';
+@import 'colors';
 
 html, body { height: 100%; }
+
+body { background-color: $purple-color; }
 
 app-root {
   display: flex;
   flex-direction: column;
   height: 100%;
   min-width: 320px;
+  background-color: #FFF;
 
   & > .wrapper { flex: 1 0 auto; }
 
