rev bump + minor layout, readme tweaks

--- a/src/app/components/_nav/tabs/tabs.component.scss
+++ b/src/app/components/_nav/tabs/tabs.component.scss
@@ -40,7 +40,10 @@ ul {
   margin: 0 auto;
   overflow-x: scroll;
 
-  @media (min-width: $md-screen) { flex-direction: column; }
+  @media (min-width: $md-screen) {
+    flex-direction: column;
+    overflow: hidden;
+  }
 }
 
 .tab-link {
