--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/variables';
 @import '../../../styles/breakpoints';
 @import '../../../styles/animation';
 @import '../../../styles/colors';
@@ -8,17 +9,16 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 54px;
+  max-height: $header-height;
   padding: 0;
   background: linear-gradient(180deg, $purple-color, $pink-color);
   box-shadow: 0 0 3px rgba(0,0,0, .35);
   transition: $fast-anim;
 
-  &.lowered { margin-top: 34px; }
+  &.lowered { margin-top: $banner-height; }
 
   &.expanded {
     max-height: 1000px;
-    padding-bottom: 15px;
     transition: $default-anim;
   }
 
@@ -26,6 +26,7 @@ nav {
     display: flex;
     flex-direction: row;
     align-items: center;
+    min-height: $header-height;
     width: 100%;
   }
 
@@ -40,7 +41,7 @@ nav {
 .logo {
   position: relative;
   display: flex;
-  height: 54px;
+  height: $header-height;
   outline: none;
 
   img {
@@ -85,7 +86,7 @@ nav {
   padding: 0;
   opacity: 0;
   overflow: hidden;
-  transition: height $default-anim, opacity .25s .15s ease-in-out;
+  transition: height $default-anim, opacity .5s .15s ease-in-out;
   animation: fade-in .25s forwards ease-in;
 
   &.expanded {
@@ -93,12 +94,18 @@ nav {
     flex-direction: column;
     max-height: 1000px;
     width: 100%;
-    padding: 10px 0;
+    padding: 10px 0 25px;
     opacity: 1;
     overflow: visible;
 
+    .menu-item {
+      opacity: 1;
+      transition: .15s .15s ease-in-out;
+    }
+
     .dropdown-toggle { display: none; }
     .avatar { opacity: .75; }
+
 
     .dropdown-menu {
       display: flex;
@@ -107,7 +114,7 @@ nav {
 
     @media (min-width: $md-screen) {
       flex-direction: row;
-      max-height: 54px;
+      max-height: $header-height;
       width: auto;
       padding-top: 0;
       padding-bottom: 0;
@@ -118,13 +125,20 @@ nav {
     }
   }
 
+  .menu-item {
+    display: flex;
+    align-items: center;
+    opacity: 0;
+  }
+
   @media (min-width: $md-screen) {
     display: flex;
-    max-height: 54px;
+    max-height: $header-height;
     width: auto;
     opacity: 1;
 
     &:not(.logged-in) { margin-right: 1rem; }
+    .menu-item { opacity: 1; }
   }
 }
 
@@ -132,11 +146,11 @@ nav {
   position: absolute;
   top: 0;
   right: 0;
-  height: 54px;
+  height: $header-height;
   padding: 0 1.25rem;
   color: #FFF;
   font-size: 25px;
-  line-height: 54px;
+  line-height: $header-height;
   transition: $fast-anim;
   cursor: pointer;
 
@@ -146,11 +160,6 @@ nav {
   @media (min-width: $md-screen) {
     display: none;
   }
-}
-
-.menu-item {
-  display: flex;
-  align-items: center;
 }
 
 .menu-link {
@@ -389,14 +398,16 @@ nav {
   }
 }
 
+/* PWA » Notification Banners */
 .offline-warning,
 .update-banner {
   position: absolute;
   display: flex;
+  z-index: 9999;
   top: 0;
   right: 0;
   left: 0;
-  height: 34px;
+  height: $banner-height;
   width: 100%;
   padding: 5px 15px;
   color: #FFF;
@@ -406,11 +417,45 @@ nav {
   animation: fade-in .15s forwards ease-in;
   overflow: hidden;
   cursor: default;
+  user-select: none;
 }
 
 .update-banner {
   background-color: $primary-color;
   cursor: pointer;
+}
+
+/* PWA » iOS Status Bar + Notch */
+.PWA-iOS-statusbar-notch { display: none; }
+
+@supports (-webkit-overflow-scrolling: touch) {
+  @media all and (display-mode: standalone) and (orientation: portrait) {
+    nav { margin-top: env(safe-area-inset-top); }
+    nav.lowered { margin-top: calc(#{$banner-height} + env(safe-area-inset-top)); }
+
+    .PWA-iOS-statusbar-notch {
+      position: absolute;
+      z-index: 1;
+      top: calc(-1 * env(safe-area-inset-top));
+      display: flex;
+      height: env(safe-area-inset-top);
+      width: 100%;
+      background: $purple-color;
+    }
+
+    .offline-warning,
+    .update-banner {
+      height: calc(#{$banner-height} + env(safe-area-inset-top));
+      padding-top: calc(5px + env(safe-area-inset-top));
+    }
+  }
+
+  @media all and (orientation: landscape) {
+    nav {
+      padding-right: env(safe-area-inset-right);
+      padding-left: env(safe-area-inset-left);
+    }
+  }
 }
 
 @keyframes fade-in {
