--- a/src/app/styles/_global.scss
+++ b/src/app/styles/_global.scss
@@ -1,16 +1,14 @@
+@import 'variables';
 @import 'breakpoints';
-@import 'colors';
+@import 'animation';
 
 html, body { height: 100%; }
-
-body { background-color: $purple-color; }
 
 app-root {
   display: flex;
   flex-direction: column;
   height: 100%;
   min-width: 320px;
-  background-color: #FFF;
 
   & > .wrapper { flex: 1 0 auto; }
 
@@ -82,4 +80,49 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+/* iOS Scrolling + Notch */
+@supports (-webkit-overflow-scrolling: touch) {
+  app-header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 9999;
+    transition: $fast-anim;
+  }
+
+  app-root > .wrapper {
+    padding-top: $header-height;
+    transition: $fast-anim;
+
+    &.lowered { padding-top: $header-height + $banner-height; }
+  }
+
+  @media all and (display-mode: standalone) {
+    app-root > .wrapper {
+      padding-top: calc(#{$header-height} + env(safe-area-inset-top));
+
+      &.lowered { padding-top: calc(#{$header-height} + #{$banner-height} + env(safe-area-inset-top)); }
+    }
+  }
+
+  @media (orientation: landscape) {
+    app-header { position: initial; }
+    app-root > .wrapper {
+      padding-top: 0;
+
+      &.lowered { padding-top: 0; }
+    }
+
+    @media all and (display-mode: standalone) {
+      app-header { position: fixed; }
+      app-root > .wrapper {
+        padding-top: $header-height !important;
+
+        &.lowered { padding-top: $header-height + $banner-height !important; }
+      }
+    }
+  }
 }
