--- a/src/app/components/_nav/header/header.component.scss
+++ b/src/app/components/_nav/header/header.component.scss
@@ -403,7 +403,7 @@ nav {
 .update-banner {
   position: absolute;
   display: flex;
-  z-index: 9999;
+  z-index: 8000;
   top: 0;
   right: 0;
   left: 0;
@@ -425,7 +425,7 @@ nav {
   cursor: pointer;
 }
 
-/* PWA » iOS Status Bar + Notch */
+/* iOS Status Bar + Notch */
 .PWA-iOS-statusbar-notch { display: none; }
 
 @supports (-webkit-overflow-scrolling: touch) {
