--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -5,12 +5,14 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: 9999;
+  z-index: 9000;
   top: 0;
+  right: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: $warm-color;
+  bottom: 0;
+  height: 100vh;
+  width: 100vw;
+  background: #FFF;
   transition: 0s;
   overflow: hidden;
 
