add user management to admin panel

--- a/src/app/components/_nav/footer/footer.component.html
+++ b/src/app/components/_nav/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <img
     alt="ng-fire-universal"
-    src="/assets/img/logo-default.svg">
+    src="/assets/img/logo-footer.svg">
   <a
     class="github"
     title="View Source on GitHub"
