--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -8,6 +8,7 @@ $success-color:       #00C851;
 
 $warm-color:          #F5F7F9;
 $light-grey-color:    #FAFAFA;
+$offset-grey-color:   #F2F2F2;
 $grey-color:          #DDD;
 $mid-grey-color:      #999;
 $dark-grey-color:     #555;
