--- a/src/app/components/_admin/users/users.component.html
+++ b/src/app/components/_admin/users/users.component.html
@@ -1,4 +1,161 @@
-<p class="d-flex align-items-center p-3 pl-md-5">
-  <span class="badge bg-primary mr-3">TODO</span>
-  Setup Users
-</p>
+<div>
+  <h3
+    class="heading"
+    *ngIf="admin.userList">Users ({{ admin.userList.length || 0 }})</h3>
+  <div *ngIf="!admin.isLoading; else showLoading">
+    <ul
+      class="list"
+      *ngIf="admin.userList">
+      <li
+        class="list-item action-item pt-3 pb-3"
+        [class.inactive]="!user.active"
+        [class.text-capitalize]="user.profile?.fname && user.profile?.lname || user.displayName"
+        *ngFor="let user of admin.userList | sortUsersPipe: 'desc'"
+        (click)="showUserModal(user.uid)">
+        <div class="avatar">
+          <div class="image"
+            [style.backgroundImage]="'url(' + user.photoURL + ')'"
+            *ngIf="user.photoURL"></div>
+          <i
+            class="fas fa-user"
+            *ngIf="!user.photoURL"></i>
+        </div>
+        <span class="title ml-0">
+          {{ user.profile?.fname && user.profile?.lname
+            ? user.profile?.fname + ' ' + user.profile?.lname
+            : user.displayName ? user.displayName : user.email }}
+        </span>
+        <div class="trigger ml-auto mr-3">
+          <i class="fa fa-chevron-right text-black-50"></i>
+        </div>
+      </li>
+    </ul>
+    <div *ngIf="!admin.userList">No Users</div>
+  </div>
+
+  <!-- Loading -->
+  <ng-template #showLoading>
+    <div class="loading-spinner mt-4">
+      <i class="fas fa-sync-alt"></i>
+    </div>
+  </ng-template>
+</div>
+
+<!-- User Modal -->
+<div [class.modal-open]="isModalActive">
+  <div
+    class="modal fade"
+    [class.show]="isModalActive"
+    id="userModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="userModal"
+    aria-hidden="true">
+    <div
+      role="document"
+      class="modal-dialog modal-notify">
+      <div
+        class="modal-content"
+        *ngIf="admin.selectedUser">
+        <div class="modal-header modal-header-feature">
+          <div class="avatar">
+            <div class="image"
+              [style.backgroundImage]="'url(' + admin.selectedUser.photoURL + ')'"
+              *ngIf="admin.selectedUser.photoURL"></div>
+            <i
+              class="fas fa-user"
+              *ngIf="!admin.selectedUser.photoURL"></i>
+          </div>
+          <h5
+            class="modal-title"
+            [class.text-lowercase]="!admin.selectedUser.profile?.fname && !admin.selectedUser.displayName">
+            {{ admin.selectedUser.profile?.fname && admin.selectedUser.profile?.lname
+              ? admin.selectedUser.profile?.fname + ' ' + admin.selectedUser.profile?.lname
+              : admin.selectedUser.displayName ? admin.selectedUser.displayName : admin.selectedUser.email }}
+          </h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+            [disabled]="admin.isUpdatingUser"
+            (click)="hideUserModal($event)">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body pt-4 pr-3 pl-3 pb-4">
+          <div class="info">
+            <div class="item">
+              <span class="label">Last Login:</span>
+              <span class="value">{{ admin.selectedUser.lastLogin.toDate() | date: 'MM/dd/yyyy @ h:mm:ss a' }}</span>
+            </div>
+            <div class="item">
+              <span class="label">Last Active:</span>
+              <span class="value">{{ admin.selectedUser.lastActive.toDate() | date: 'MM/dd/yyyy @ h:mm:ss a' }}</span>
+            </div>
+            <div class="item">
+              <span class="label">Account Status:</span>
+              <span class="value">{{ admin.selectedUser.active ? admin.selectedUser.isAdmin ? 'Admin' : 'Active User' : 'Deactivated' }}</span>
+            </div>
+            <div
+              class="item"
+              *ngIf="admin.selectedUser.profile?.fname && admin.selectedUser.profile?.lname">
+              <span class="label">Full Name:</span>
+              <span class="value">{{ admin.selectedUser.profile?.fname + ' ' + admin.selectedUser.profile?.lname }}</span>
+            </div>
+            <div
+              class="item"
+              *ngIf="admin.selectedUser.displayName">
+              <span class="label">OAuth Name:</span>
+              <span class="value">{{ admin.selectedUser.displayName }}</span>
+            </div>
+            <div class="item">
+              <span class="label">Email:</span>
+              <span class="value">{{ admin.selectedUser.email }}</span>
+            </div>
+            <div
+              class="item"
+              *ngIf="admin.selectedUser.profile?.company">
+              <span class="label">Company:</span>
+              <span class="value">{{ admin.selectedUser.profile?.company }}</span>
+            </div>
+            <div
+              class="item"
+              *ngIf="admin.selectedUser.profile?.website">
+              <span class="label">Website:</span>
+              <span class="value">{{ admin.selectedUser.profile?.website }}</span>
+            </div>
+            <div class="item">
+              <span class="label">UID:</span>
+              <span class="value uid">{{ admin.selectedUser.uid }}</span>
+            </div>
+          </div>
+          <div
+            class="loading"
+            [class.isActive]="admin.isUpdatingUser">
+            <div class="loading-spinner mt-4">
+              <i class="fas fa-sync-alt"></i>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer p-2">
+          <button
+            class="btn btn-sm ml-2 mr-auto"
+            [class.btn-primary]="!admin.selectedUser.isAdmin"
+            [class.btn-danger]="admin.selectedUser.isAdmin"
+            [disabled]="admin.selectedUser.uid === auth.getUserID() || !admin.selectedUser.active || admin.isUpdatingUser"
+            (click)="admin.setUserAdminState(admin.selectedUser.uid, admin.selectedUser.email, !admin.selectedUser.isAdmin)">
+            <span [innerHTML]="admin.selectedUser.isAdmin ? 'Revoke' : 'Make'"></span> Admin
+            <i class="fas fa-lock ml-1"></i>
+          </button>
+          <button
+            type="button"
+            class="btn btn-sm btn-grey mr-2"
+            data-dismiss="modal"
+            [disabled]="admin.isUpdatingUser"
+            (click)="hideUserModal($event)">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
