--- a/src/app/components/_user/profile/edit-avatar/edit-avatar.component.scss
+++ b/src/app/components/_user/profile/edit-avatar/edit-avatar.component.scss
@@ -1,12 +1,11 @@
-@import '../../../../styles/breakpoints';
-@import '../../../../styles/colors';
+@import 'src/app/styles/breakpoints';
+@import 'src/app/styles/colors';
 
 :host {
   width: 100%;
   min-width: 180px;
-  max-width: 460px;
   margin: 0 auto;
-  padding: 1rem 0;
+  padding: 0 0 1rem;
 
   @media (min-width: $lg-screen) {
     padding: 2rem 1rem 2rem 2rem;
