--- a/src/app/components/_user/profile/profile.component.scss
+++ b/src/app/components/_user/profile/profile.component.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
 
+  @media (min-width: $md-screen) {
+    padding-left: 2rem;
+  }
+
   @media (min-width: $lg-screen) {
     flex-direction: row !important;
     flex-grow: 1 !important;
@@ -22,11 +26,9 @@
 form {
   flex: 1;
   width: 100%;
-  max-width: 460px;
-  margin: 0 auto;
   padding-top: 2rem;
 
   @media (min-width: $lg-screen) {
-    padding: 2rem;
+    padding: 2rem 2rem 2rem 0;
   }
 }
