--- a/src/app/styles/_animation.scss
+++ b/src/app/styles/_animation.scss
@@ -3,7 +3,6 @@
 $default-anim: .25s ease-in-out;
 $fast-anim: .15s ease-in-out;
 
-
 .loading-spinner {
   display: flex;
   justify-content: center;
@@ -16,7 +15,29 @@ $fast-anim: .15s ease-in-out;
   i { animation: spin 1.25s infinite linear; }
 }
 
+@keyframes fade-in {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 @keyframes spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+@keyframes wave {
+  0%, 100% { transform: rotate(0); }
+  20%, 60% { transform: rotate(-25deg); }
+  40%, 80% { transform: rotate(10deg); }
+}
+
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(10px); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes fade-up-in {
+  from { transform: translate3d(0, 30px, 0); opacity: 0; }
+  to { transform: translate3d(0,0,0); opacity: 1; }
 }
