--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,10 @@
 @import './app/styles/external/font-awesome.css';
 
 @import './app/styles/global';
-@import './app/styles/colors';
+@import './app/styles/notifications';
 @import './app/styles/typography';
+@import './app/styles/colors';
 @import './app/styles/forms';
+@import './app/styles/lists';
 @import './app/styles/buttons';
 @import './app/styles/modals';
-@import './app/styles/animation';
-@import './app/styles/notifications';
