add isExact flag to tabs component for routerLinkActiveOptions

--- a/src/app/components/_nav/tabs/tabs.component.html
+++ b/src/app/components/_nav/tabs/tabs.component.html
@@ -6,7 +6,7 @@
       class="tab-link"
       routerLink="{{ tab.routerLink }}"
       routerLinkActive="active"
-      [routerLinkActiveOptions]="{exact: true}">
+      [routerLinkActiveOptions]="tab.isExact ? {exact: true} : {exact: false}">
       {{ tab.label }}
       <span *ngIf="tab.count">({{ tab.count }})</span>
     </a>
