update login + sign up button labels

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,7 +36,7 @@
       <button
         type="submit"
         class="btn btn-sm btn-secondary"
-        [disabled]="!loginForm.valid || !platform.isOnline()">Ready</button>
+        [disabled]="!loginForm.valid || !platform.isOnline()">Login</button>
       <p class="reset-password">
         Forget your password?
         <span
