--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -5,11 +5,9 @@
   position: fixed;
   z-index: 9000;
   top: 0;
-  right: 0;
   left: 0;
-  bottom: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background: #FFF;
   transition: 0s;
   overflow: hidden;
