--- a/src/app/components/_user/home/user-profile/user-profile.component.scss
+++ b/src/app/components/_user/home/user-profile/user-profile.component.scss
@@ -14,7 +14,10 @@
   background: linear-gradient(to top, rgba(0,0,0, .02) 0%, rgba(0,0,0, 0) 70%);
   border-bottom: 1px solid rgba(0,0,0, .1);
 
-  @media (min-width: $sm-screen) { left: calc(-1 * (100vw - 100%) / 2); }
+  @media (min-width: $sm-screen) {
+    left: calc(-1 * (100vw - 100%) / 2);
+    margin: -2.5rem 0 0;
+  }
 
   @media (min-width: $md-screen) {
     position: static;
