--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,15 @@
 @import './app/styles/external/mdb.css';
 @import './app/styles/external/font-awesome.css';
 
-@import './app/styles/global';
-@import './app/styles/notifications';
-@import './app/styles/typography';
+@import './app/styles/variables';
+@import './app/styles/breakpoints';
+@import './app/styles/animation';
 @import './app/styles/colors';
+@import './app/styles/typography';
+
+@import './app/styles/global';
+@import './app/styles/pwa';
+@import './app/styles/notifications';
 @import './app/styles/forms';
 @import './app/styles/lists';
 @import './app/styles/buttons';
