--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 
 @import './app/styles/global';
 @import './app/styles/pwa';
+@import './app/styles/loading';
 @import './app/styles/notifications';
 @import './app/styles/forms';
 @import './app/styles/lists';
