--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -1,23 +1,8 @@
+@import '../../styles/colors';
+
 .loading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   z-index: 9000;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: #FFF;
-  transition: 0s;
-  overflow: hidden;
-
-  &.disabled {
-    width: 0;
-    height: 0;
-    opacity: 0;
-    transition: height 0s .25s, width 0s .25s, opacity .25s;
-  }
 
   .splash {
     display: flex;
@@ -27,7 +12,14 @@
     width: 300px;
     height: 300px;
     opacity: 0;
-    animation: fade-in .25s .35s forwards ease-in;
+    animation: fade-in .25s .25s forwards ease-in;
     user-select: none;
+  }
+
+  ::ng-deep .loading-spinner {
+    font-size: 50px;
+    color: $grey-color;
+    animation: none;
+    opacity: 1;
   }
 }
