add check for unsaved profile changes to edit-avatar

--- a/src/app/components/_user/profile/profile.component.html
+++ b/src/app/components/_user/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-edit-avatar></app-edit-avatar>
+<app-edit-avatar [hasUnsavedChanged]="isDirty"></app-edit-avatar>
 <form
   *ngIf="profile"
   [formGroup]="profileForm">
