--- a/src/app/components/_user/profile/edit-avatar/edit-avatar.component.html
+++ b/src/app/components/_user/profile/edit-avatar/edit-avatar.component.html
@@ -3,7 +3,7 @@
   <div
     class="avatar"
     [class.default]="!user.avatar && !user.isLoading && !user.isUploading"
-    (click)="trigger()">
+    (click)="triggerUpload()">
     <div
       class="image"
       [style.backgroundImage]="'url(' + user.avatar + ')'"
@@ -20,7 +20,7 @@
   <button
     type="button"
     [disabled]="user.isUpdating || user.isUploading || !platform.isOnline()"
-    (click)="trigger()"
+    (click)="triggerUpload()"
     class="btn btn-sm btn-primary">
     <i class="fa fa-upload mr-1 mr-md-2"></i>
     Change Avatar
